--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ flutter:
     - images/icon_love_card.png
     - images/img_login.png
     - images/img_register.png
+    - images/placeholder.jpg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
